@@ -24,6 +24,8 @@ release 0.7 (2008-04-18)
     readers and writers. Note this is very similar to
     com.sun.ws.rest.spi.container.MessageBodyContext, which will be removed
     if/when MessageBodyWorkers supports the same functionality.
+  - javax.ws.rs.ext.ContextResolver replaces
+    com.sun.ws.rest.spi.service.ContextResolver (which has been removed).
 
 release 0.6.1 (2008-03-18)
 - Support for xml attributes serialization/deserialization in JSON added
